# FrostWeb

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: board_manager.cpp.CDB14CFC2FB9D7A1.idx  board_manager.hpp.C3A9E114E78557CC.idx  lookup_tables.cpp.C6AB31E8DB86183B.idx  lookup_tables.hpp.A6EF8D3ABCB4F802.idx  main.cpp.D411F03A249A3F8E.idx  move_encoding.hpp.73A8EE8B9EEFD686.idx  test_move_making.cpp.59AE7B1D4256A7FB.idx
FrostWeb/: board.cpp  board.hpp  debug.cpp  evaluate.cpp  evaluate.hpp  genMove.cpp  search.cpp  search.hpp
FrostWeb2.0/: .clangd  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
FrostWeb2.0/board_manager/: board_manager.cpp  board_manager.hpp
FrostWeb2.0/lookup_tables/: lookup_tables.cpp  lookup_tables.hpp
FrostWeb2.0/move_encoding/: move_encoding.hpp
FrostWeb2.0/tests/: test_move_gen.cpp
PythonInterface/: FrostWeb.py
src/board_manager/: board_manager.hpp
src/move_encoding/: move_encoding.hpp
tests/: one_test.cpp  test_move_gen.cpp  test_move_making.cpp
